feat: Introduce a comprehensive notification system, enable community-specific programs, and add new backlog items for internationalization and community store.